--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -31,6 +31,10 @@
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
 
+                                    <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
+                                                            [is_required_circle]="false"
+                                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Name of Officer</mat-label>
@@ -51,6 +55,17 @@
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>
+                                            </mat-label>
+                                            <input matInput [matDatepicker]="picker" formControlName="TourDate" maxlength="30" autocomplete="off"
+                                                   [max]="maxDate" (dateChange)="setDate()" appNumberOnly/>
+                                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                            <mat-datepicker #picker></mat-datepicker>
+                                        </mat-form-field>
+                                    </div>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label>Tour Plan</mat-label>
                                             <mat-select formControlName="TourPlanId">
@@ -58,27 +73,11 @@
                                                     Select
                                                 </mat-option>
                                                 <mat-option *ngFor="let obj of TourPlan" [value]="obj.TourPlanId">
-                                                    {{obj.DisbDesc}}
+                                                    {{obj.PurposeName}}
                                                 </mat-option>
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
-
-
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>
-                                            </mat-label>
-                                            <input matInput [matDatepicker]="picker2" formControlName="TourDate" maxlength="30" autocomplete="off"
-                                                   [max]="maxDate" (dateChange)="isEnableReceipt(false)" appNumberOnly/>
-                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                                            <mat-datepicker #picker2></mat-datepicker>
-                                        </mat-form-field>
-                                    </div>
-
-                                    <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
-                                                            [is_required_circle]="false"
-                                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                                 </div>
 
@@ -580,22 +579,22 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12">
-                                <div class="flex" style="flex-wrap: wrap;">
+<!--                            <div class="col-lg-12">-->
+<!--                                <div class="flex" style="flex-wrap: wrap;">-->
 
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Name</mat-label>
-                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Designation</mat-label>
-                                            <input matInput formControlName="Designation" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Name</mat-label>-->
+<!--                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Designation</mat-label>-->
+<!--                                            <input matInput formControlName="Designation" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
 <!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
 <!--                                            <mat-label class="customMatLabel">Dated <strong class="matMandatory">*</strong>-->
 <!--                                            </mat-label>-->
@@ -604,15 +603,15 @@
 <!--                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>-->
 <!--                                            <mat-datepicker #picker2></mat-datepicker>-->
 <!--                                        </mat-form-field>-->
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Dated</mat-label>
-                                            <input matInput formControlName="Dated" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Dated</mat-label>-->
+<!--                                            <input matInput formControlName="Dated" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                </div>-->
 
 
-                            </div>
+<!--                            </div>-->
 
                         </div>
 
@@ -620,14 +619,14 @@
                 </form>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 flex  py-2 border-t">
-                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
-                    <mat-icon class="mr-2">check_circle</mat-icon>
-                    Submit
-                </button>
-            </div>
-        </div>
+<!--        <div class="row">-->
+<!--            <div class="col-lg-12 flex  py-2 border-t">-->
+<!--                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">-->
+<!--                    <mat-icon class="mr-2">check_circle</mat-icon>-->
+<!--                    Submit-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
     </div>
