--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -73,7 +73,7 @@
                                                     Select
                                                 </mat-option>
                                                 <mat-option *ngFor="let obj of TourPlan" [value]="obj.TourPlanId">
-                                                    {{obj.DisbDesc}}
+                                                    {{obj.PurposeName}}
                                                 </mat-option>
                                             </mat-select>
                                         </mat-form-field>
@@ -410,35 +410,35 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12">
-                                <div class="flex" style="flex-wrap: wrap;">
+<!--                            <div class="col-lg-12">-->
+<!--                                <div class="flex" style="flex-wrap: wrap;">-->
 
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Name</mat-label>
-                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Designation</mat-label>
-                                            <input matInput formControlName="Designation" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>
-                                            </mat-label>
-                                            <input matInput [matDatepicker]="picker2" formControlName="Date" maxlength="30" autocomplete="off"
-                                                   [max]="maxDate" (dateChange)="setDate()" appNumberOnly/>
-                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                                            <mat-datepicker #picker2></mat-datepicker>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Name</mat-label>-->
+<!--                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Designation</mat-label>-->
+<!--                                            <input matInput formControlName="Designation" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>-->
+<!--                                            </mat-label>-->
+<!--                                            <input matInput [matDatepicker]="picker2" formControlName="Date" maxlength="30" autocomplete="off"-->
+<!--                                                   [max]="maxDate" (dateChange)="setDate()" appNumberOnly/>-->
+<!--                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>-->
+<!--                                            <mat-datepicker #picker2></mat-datepicker>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                </div>-->
 
 
-                            </div>
+<!--                            </div>-->
 
                         </div>
                     </div>
@@ -446,14 +446,14 @@
                 </form>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 flex  py-2 border-t">
-                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
-                    <mat-icon class="mr-2">check_circle</mat-icon>
-                    Submit
-                </button>
-            </div>
-        </div>
+<!--        <div class="row">-->
+<!--            <div class="col-lg-12 flex  py-2 border-t">-->
+<!--                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">-->
+<!--                    <mat-icon class="mr-2">check_circle</mat-icon>-->
+<!--                    Submit-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
     </div>
