--- a/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
+++ b/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
@@ -15,37 +15,37 @@
         </div>
     </div>
 
-    <div class="mt-2">
-        <div class="col-lg-12">
-            <div class="flex" style="flex-wrap: wrap;">
-
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Name</mat-label>
-                        <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input>
-                    </mat-form-field>
-                </div>
-
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Name</mat-label>
-                        <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input>
-                    </mat-form-field>
-                </div>
+<!--    <div class="mt-2">-->
+<!--        <div class="col-lg-12">-->
+<!--            <div class="flex" style="flex-wrap: wrap;">-->
 
 <!--                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
-
-<!--                    <button class="bg-gray-500" mat-raised-button color="primary" (click)="find()">-->
-<!--                        <mat-icon class="mr-2">search</mat-icon>-->
-<!--                        Find-->
-<!--                    </button>-->
+<!--                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                        <mat-label class="customMatLabel">Name</mat-label>-->
+<!--                        <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input>-->
+<!--                    </mat-form-field>-->
 <!--                </div>-->
 
-            </div>
+<!--                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                        <mat-label class="customMatLabel">Name</mat-label>-->
+<!--                        <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input>-->
+<!--                    </mat-form-field>-->
+<!--                </div>-->
+
+<!--&lt;!&ndash;                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">&ndash;&gt;-->
+
+<!--&lt;!&ndash;                    <button class="bg-gray-500" mat-raised-button color="primary" (click)="find()">&ndash;&gt;-->
+<!--&lt;!&ndash;                        <mat-icon class="mr-2">search</mat-icon>&ndash;&gt;-->
+<!--&lt;!&ndash;                        Find&ndash;&gt;-->
+<!--&lt;!&ndash;                    </button>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+
+<!--            </div>-->
 
 
-        </div>
-    </div>
+<!--        </div>-->
+<!--    </div>-->
 
     <div class="mt-2">
 
