--- a/src/app/modules/tour-dairy/set-target/set-target.component.scss
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.scss
@@ -13,3 +13,14 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+
+.exceptionalclass{
+    background: #d0d0d0;
+    padding-left: 7px !important;
+}
+.input-class{
+    td{
+        padding-top: 1em !important;
+
+    }
+}
