--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -31,28 +31,23 @@
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
 
+                                    <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
+                                                            [is_required_circle]="false"
+                                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Name of Officer</mat-label>
                                             <input matInput formControlName="NameOfOfficer" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
+
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">P.P.NO</mat-label>
                                             <input matInput formControlName="PPNO" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
-
-<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
-<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-<!--                                            <mat-label class="customMatLabel">Month</mat-label>-->
-<!--                                            <input matInput formControlName="Month" autocomplete="off" readonly="readonly"/>-->
-<!--                                        </mat-form-field>-->
-<!--                                    </div>-->
-
-
-
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -77,15 +72,6 @@
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
-<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
-<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-<!--                                            <mat-label class="customMatLabel">Zone</mat-label>-->
-<!--                                            <input matInput formControlName="Zone" autocomplete="off" readonly="readonly"/>-->
-<!--                                        </mat-form-field>-->
-<!--                                    </div>-->
-                                    <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
-                                                            [is_required_circle]="false"
-                                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                                 </div>
 
@@ -511,35 +497,35 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12">
-                                <div class="flex" style="flex-wrap: wrap;">
+<!--                            <div class="col-lg-12">-->
+<!--                                <div class="flex" style="flex-wrap: wrap;">-->
 
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Name</mat-label>
-                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Designation</mat-label>
-                                            <input matInput formControlName="Designation" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>
-                                            </mat-label>
-                                            <input matInput [matDatepicker]="picker2" (dateChange)="setDate()" formControlName="Date" maxlength="30" autocomplete="off"
-                                                   [max]="maxDate" appNumberOnly/>
-                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                                            <mat-datepicker #picker2></mat-datepicker>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Name</mat-label>-->
+<!--                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Designation</mat-label>-->
+<!--                                            <input matInput formControlName="Designation" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>-->
+<!--                                            </mat-label>-->
+<!--                                            <input matInput [matDatepicker]="picker2" (dateChange)="setDate()" formControlName="Date" maxlength="30" autocomplete="off"-->
+<!--                                                   [max]="maxDate" appNumberOnly/>-->
+<!--                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>-->
+<!--                                            <mat-datepicker #picker2></mat-datepicker>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
+<!--                                </div>-->
 
 
-                            </div>
+<!--                            </div>-->
 
                         </div>
                     </div>
@@ -547,14 +533,14 @@
                 </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 flex  py-2 border-t">
-                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
-                    <mat-icon class="mr-2">check_circle</mat-icon>
-                    Submit
-                </button>
-            </div>
-        </div>
+<!--        <div class="row">-->
+<!--            <div class="col-lg-12 flex  py-2 border-t">-->
+<!--                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">-->
+<!--                    <mat-icon class="mr-2">check_circle</mat-icon>-->
+<!--                    Submit-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
     </div>
