--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -356,7 +356,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Amount recovered (Daily)</mat-label>
-                                        <input matInput placeholder="DisbNoOfCasesAppraised" formControlName="RecNoOfDefaulterContacted" maxlength="30"
+                                        <input matInput placeholder="RecNoOfDefaulterContacted" formControlName="RecNoOfDefaulterContacted" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
