--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -22,13 +22,15 @@
                                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mr-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Name of Officer</mat-label>
+                                            <mat-label class="customMatLabel">Name of Officer<strong
+                                                class="matMandatory">*</strong></mat-label>
                                             <input matInput placeholder="Enter Name of Officer" formControlName="Name" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">PP NO:</mat-label>
+                                            <mat-label class="customMatLabel">PP NO: <strong
+                                                class="matMandatory">*</strong></mat-label>
                                             <input matInput placeholder="Enter Ppno" formControlName="Ppno" maxlength="30"
                                                    autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
@@ -475,7 +477,7 @@
         <div class="col-lg-12 text-right">
             <button *ngIf="isUpdate==false" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
             <button *ngIf="isUpdate==true" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
-            <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('S')">
+            <button *ngIf="isUpdate==true" mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                 <mat-icon class="mr-2">check_circle</mat-icon>
                 Submit
             </button>
@@ -535,7 +537,7 @@
                             edit
                         </mat-icon>
                     </button>
-                    <button mat-icon-button (click)="changeStatus('C')">
+                    <button mat-icon-button (click)="changeStatus(mcoDiary,'C')">
                         <mat-icon class="text-red-500">
                             delete_forever
                         </mat-icon>
@@ -739,7 +741,7 @@
 
     <div class="row">
         <div class="col-lg-12 flex  py-2 border-t">
-            <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('S')">
+            <button *ngIf="isUpdate" mat-raised-button class="mr-2" color="primary">
                 <mat-icon class="mr-2">check_circle</mat-icon>
                 Submit
             </button>
