remarks mandatory added

--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -45,7 +45,8 @@
         <div class="col-lg-3 col-sm-12  kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                    <mat-label class="customMatLabel">Remarks</mat-label>
+                    <mat-label class="customMatLabel">Remarks<strong
+                        class="matMandatory">*</strong></mat-label>
                     <input maxlength="500" matInput placeholder="Enter Remarks" formControlName="Remarks" autocomplete="off" [readonly]="viewMode" />
                 </mat-form-field>
             </div>
