--- a/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
+++ b/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
@@ -22,7 +22,8 @@
 <div class="mx-2 pt-2" [ngClass]="classDesign()">
     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 overflow-hidden">
         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label>Remarks</mat-label>
+            <mat-label>Remarks<strong
+                class="matMandatory">*</strong></mat-label>
             <input maxlength="500" matInput [(ngModel)]="remarks" placeholder="Remarks" />
         </mat-form-field>
     </div>
