visit date variable change

--- a/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
+++ b/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
@@ -44,7 +44,7 @@
                         <th>Zone</th>
                         <th>Branch</th>
                         <th>Circle</th>
-                        <th>Visited Date</th>
+                        <th>Visit Date</th>
                         <th>Purpose</th>
                         <th>Remarks</th>
                         <th>Status</th>
