--- a/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
+++ b/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
@@ -38,7 +38,7 @@
                             <th>Zone</th>
                             <th>Branch</th>
                             <th>Circle</th>
-                            <th>Visited Date</th>
+                            <th>Visit Date</th>
                             <th>Purpose</th>
                             <th>Remarks</th>
                             <th>Status</th>
